--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "@vercel/postgres": "https://esm.sh/@vercel/postgres@^0.10.0",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
-    "vite": "https://esm.sh/vite@^7.3.1"
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
   }
 }
 </script>
