--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         outline: none;
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^18.3.1/",
-    "react": "https://esm.sh/react@^18.3.1",
-    "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.344.0",
-    "recharts": "https://esm.sh/recharts@^2.12.2",
-    "@vercel/postgres": "https://esm.sh/@vercel/postgres@^0.7.2",
-    "bcryptjs": "https://esm.sh/bcryptjs@^2.4.3",
-    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.2",
-    "vite": "https://esm.sh/vite@^5.1.4",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.2.1"
+    "react/": "https://esm.sh/react@^19.2.4/",
+    "react": "https://esm.sh/react@^19.2.4",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.564.0",
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "@vercel/postgres": "https://esm.sh/@vercel/postgres@^0.10.0",
+    "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3"
   }
 }
 </script>
