--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     "bcryptjs": "https://esm.sh/bcryptjs@^3.0.3",
     "jsonwebtoken": "https://esm.sh/jsonwebtoken@^9.0.3",
     "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "path": "https://esm.sh/path@^0.12.7"
   }
 }
 </script>
