feat: Implement user password change
Adds functionality for users to change their passwords securely. Includes UI for inputting old and new passwords, API integration, and error/success handling. Also includes backend validation for password strength and matching confirmation.

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         background: transparent; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #94a3b8; 
+        background: #52525b; /* Zinc-600 */
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
+        background: #3f3f46; /* Zinc-700 */
       }
       
       /* Recharts Tooltip Reset */
@@ -78,7 +78,7 @@
 }
 </script>
 </head>
-  <body class="bg-gray-50 dark:bg-slate-950 text-slate-800 dark:text-slate-200 selection:bg-primary selection:text-white">
+  <body class="bg-gray-50 dark:bg-black text-slate-800 dark:text-zinc-200 selection:bg-primary selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
